# ScatteringDataImport

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  project.clang-format
.travis/linux/: install.sh
GUI/: CMakeLists.txt
GUI/utilities/: SettingsList.cpp  SettingsList.h
GUI/widgets/: DataTypeButtons.cpp  DataTypeButtons.h  MainWindow.cpp  MainWindow.h  TypeButtonGroup.cpp  TypeButtonGroup.h  TypeSelector.cpp  TypeSelector.h
cmake/modules/: configuration.cmake
main/: CMakeLists.txt  main.cpp
